--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "declarationDir": "./dist"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "transform": {
+    "^.+\\.tsx?$": "ts-jest"
+  }
 }
