--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ocsa-breadcrumb",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A React breadcrumb component with TypeScript",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -28,11 +28,12 @@
     "typescript": "^4.5.0"
   },
   "keywords": [
+    "breadcrumb",
     "react",
     "component",
-    "ocsa-lib"
+    "ocsa"
   ],
-  "author": "Your Name",
+  "author": "Terry Partridge",
   "license": "MIT",
   "dependencies": {
     "@types/react": "^18.3.12",
